refactor!: parameterized Dockerfile + multi-arch CI; dev image, plugin fixes, and docs
- Dockerfile
  - Parameterize PHP via ARG (8.3/8.4); runtime + dev stages
  - Imagick pinned to 3.8.0 for PHP 8.4 compat; AzCopy arch-aware
  - OCI labels set; healthcheck added; New Relic install made best‑effort
  - Use template-based PHP/Apache/sysctl/unison config; bundle monitor plugin

- Sync/init
  - Bootstrap WordPress files and wp-config from template when missing
  - One-time Unison seeding logic; permissions fix; supervisord integration
  - Removed auto-install (prod-safe); optional plugin auto-activation retained

- Plugin (wordpress-azure-monitor)
  - Admin bar shows on “Error”; hide only when “Disabled”
  - Status parsing tolerant of “Sync completed: <timestamp>”
  - Version: 0.1.5

- Example
  - docker-compose uses Hub image by default; volumes for live dev
  - Local DB overrides via WORDPRESS_CONFIG_EXTRA; Xdebug envs
  - README with WP-CLI usage and local dev notes

- Build/CI
  - docker-bake.hcl targets: php83/php84 and -dev variants
  - GitHub Actions: buildx multi-arch; image name → bluegrassdigital/wordpress-azure-sync
  - Tagging policy: latest on branch; stable + full PHP version tags only on release tags

- Repo hygiene
  - Add .dockerignore to shrink context
  - Add DEV.md, OPERATIONS.md, ROADMAP.md

BREAKING CHANGES:
- Image name changed to bluegrassdigital/wordpress-azure-sync
- Auto WordPress install removed; initial install must be done explicitly
- Stable/full-version tags are published only from release tags

Follow-ups:
- Add tag push trigger (on: push: tags: ['v*']) to CI
- Link DEV.md and OPERATIONS.md from root README

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -35,10 +35,11 @@ stdout_logfile=/home/LogFiles/sync-init.log
 stderr_logfile=/home/LogFiles/sync-init-error.log
 
 [program:sync]
-command=unison default -force /homelive -repeat watch -watch
+command=/usr/local/bin/unison default -force /homelive -repeat 2
 user=root
 autorestart=true
 autostart=false
+environment=HOME="/root",PATH="/usr/local/bin:/usr/bin:/bin"
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 redirect_stderr = true
