--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,6 +12,8 @@ on:
       - "docker-entrypoint.sh"
   # Promote stable/full-version tags only on git tags
   workflow_dispatch:
+  schedule:
+    - cron: "0 3 * * 1"   # Weekly rebuild to pick up PHP/OS patches
 
 jobs:
   build-and-push:
@@ -49,10 +51,13 @@ jobs:
         with:
           context: .
           file: Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ github.ref_type == 'tag' && 'linux/amd64,linux/arm64' || 'linux/amd64' }}
           push: true
           build-args: |
             PHP_VERSION=${{ matrix.php_version }}
+          cache-from: type=gha,scope=${{ matrix.php_version }}-prod
+          cache-to: type=gha,mode=max,scope=${{ matrix.php_version }}-prod
+          provenance: false
           tags: |
             ${{ env.IMAGE_NAME }}:${{ matrix.php_version }}-latest
             ${{ github.ref_type == 'tag' && format('{0}:{1}-stable', env.IMAGE_NAME, matrix.php_version) || '' }}
@@ -65,10 +70,13 @@ jobs:
           context: .
           file: Dockerfile
           target: dev
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ github.ref_type == 'tag' && 'linux/amd64,linux/arm64' || 'linux/amd64' }}
           push: true
           build-args: |
             PHP_VERSION=${{ matrix.php_version }}
+          cache-from: type=gha,scope=${{ matrix.php_version }}-dev
+          cache-to: type=gha,mode=max,scope=${{ matrix.php_version }}-dev
+          provenance: false
           tags: |
             ${{ env.IMAGE_NAME }}:${{ matrix.php_version }}-dev-latest
             ${{ github.ref_type == 'tag' && format('{0}:{1}-dev-stable', env.IMAGE_NAME, matrix.php_version) || '' }}
