--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,9 +3,22 @@ nodaemon=true
 loglevel=error
 logfile=/home/LogFiles/supervisord.log
 pidfile=/var/run/supervisord.pid
+user=root
+
+[unix_http_server]
+file=/var/run/supervisor.sock
+chmod=0700
+chown=root:root
+username=supervisor
+password=localonly
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock
+username=supervisor
+password=localonly
 
 [program:cron]
 command=service cron start
