--- a/supervisord.conf
+++ b/supervisord.conf
@@ -44,8 +44,10 @@ command = /usr/local/bin/sync-init.sh
 startsecs = 0
 autorestart = false
 startretries = 1
-stdout_logfile=/home/LogFiles/sync-init.log
-stderr_logfile=/home/LogFiles/sync-init-error.log
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 
 [program:sync]
 command=/usr/local/bin/unison default -force /homelive -repeat 2
