supervisor: run cron and ssh in foreground; raise loglevel to info

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,6 +1,6 @@
 [supervisord]
 nodaemon=true
-loglevel=error
+loglevel=info
 logfile=/home/LogFiles/supervisord.log
 pidfile=/var/run/supervisord.pid
 user=root
@@ -21,16 +21,18 @@ username=supervisor
 password=localonly
 
 [program:cron]
-command=service cron start
+command=/usr/sbin/cron -f
 stdout_events_enabled=true
 stderr_events_enabled=true
 autorestart=true
 autostart=true
 
 [program:ssh]
-command=service ssh start
+command=/usr/sbin/sshd -D -e
 stdout_events_enabled=true
 stderr_events_enabled=true
+autostart=true
+autorestart=true
 
 [program:apache2]
 command=/usr/bin/pidproxy /var/run/apache2/apache2.pid /bin/bash -c "/usr/sbin/apache2ctl -D FOREGROUND"
