--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -34,8 +34,8 @@ jobs:
           git fetch --tags
           git checkout $(git describe --tags --abbrev=0)
 
-      - name: Set build date
-        run: echo "BUILD_DATE=$(date +%Y%m%d)" >> $GITHUB_ENV
+      - name: Set build timestamp
+        run: echo "BUILD_DATE=$(date +%Y%m%d%H%M%S)" >> $GITHUB_ENV
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
